debian-installer (20120829) UNRELEASED; urgency=low

  * Drop outdated documentation about brltty.

 -- Samuel Thibault <sthibault@debian.org>  Sat, 15 Sep 2012 00:40:50 +0200

debian-installer (20120828) unstable; urgency=low

  [ Cyril Brulebois ]
  * Team upload.

  [ Robert Millan ]
  * Bump kFreeBSD ABI.

  [ Julien Cristau ]
  * Switch from module-init-tools-udeb to libkmod2-udeb (closes: #683790)
  * Don't remove modules.{dep,alias}.bin from /lib/modules/*, without them
    kmod doesn't load any module.  Instead remove the non-.bin files, which
    aren't necessary.  Thanks to Didier Raboud for the report and help.

  [ Didier Raboud ]
  * Fix typo in the fix for the kfreebsd empty line in Grub.
    (Closes: #680850)

  [ Ian Campbell ]
  * Add netboot images for kirkwood/dreamplug platform.

  [ Samuel Thibault ]
  * Fix gnu-mach-color terminfo into mach-gnu-color.

 -- Cyril Brulebois <kibi@debian.org>  Tue, 28 Aug 2012 09:44:42 +0200

debian-installer (20120712) unstable; urgency=low

  [ Cyril Brulebois ]
  * Team upload.

  [ Julien Cristau ]
  * Update to 3.2.0-3 linux ABI.
  * Follow symlinks when generating checksum files, so the guruplug paths are
    included.  Thanks, Didier Raboud.

  [ Didier Raboud ]
  * Switch the boot backgrounds to the Wheezy joy theme.

  [ Steven Chamberlain ]
  * Fix the place of the kfreebsd empty line in Grub (Closes: #680850).

  [ Samuel Thibault ]
  * Add console-setup-udeb to hurd-i386.

 -- Cyril Brulebois <kibi@debian.org>  Thu, 12 Jul 2012 14:23:12 +0200

debian-installer (20120626) unstable; urgency=low

  [ Cyril Brulebois ]
  * Team upload.
  * Fix FTBFS when some foreign packages are installed in a
    multiarch-enabled environment (Closes: #678943): use arch-qualified
    package names when calling “dpkg -s” when a multiarch-aware dpkg is
    detected.

  [ Christian Perrier ]
  * Add fonts-sil-padauk-udeb to gtk-common to support Burmese
    Closes: #672635

  [ Simon Guinot ]