@@ -4,4 +4,5 @@ xserver-xorg-video-fbdev-udeb
 
 speakup-modules-${kernel:Version}
 sound-modules-${kernel:Version}
+console-setup-linux-fonts-udeb
 espeakup-udeb
