@@ -429,6 +429,12 @@ languages list by changing the <userinput>nlp_step</userinput> field
 value to <emphasis>needed_characters</emphasis>.
 </para>
 
+<para>
+For font switch support in the bare Linux console, the language coordinator must
+also provide which <classname>console-setup</classname> font should be used, to
+be recorded in its <classname>debian/font-switch</classname> script.
+</para>
+
 </sect1>
 
 <sect1>
