@@ -1,8 +1,11 @@
 debian-installer (20120829) UNRELEASED; urgency=low
 
   * Drop outdated documentation about brltty.
+  * Add console-setup-linux-fonts-udeb to speakup-enabled images.
+  * Document that new languages need to specify a console-setup font name to
+    be loaded.
 
- -- Samuel Thibault <sthibault@debian.org>  Sat, 15 Sep 2012 00:40:50 +0200
+ -- Samuel Thibault <sthibault@debian.org>  Sat, 15 Sep 2012 00:47:54 +0200
 
 debian-installer (20120828) unstable; urgency=low
 
